syntax = "proto2";
package PB_MEUMX;
option java_package = "com.meux.icarbonx.proto";

//定义Protobuf协议交互框架类名
option java_outer_classname = "ProtoServerConf";


//配置文件
message FileUpload
{
    repeated  bytes file = 1;
}

