syntax = "proto2";
package PB_MEUMX;
option java_package = "com.meux.icarbonx.proto";

//定义Protobuf协议交互框架类名
option java_outer_classname = "PbItem";

//添加物品
message AddItem {
    required sint64 rid = 1;               //角色rid
    required sint32 wid = 2;               //世界wid
    repeated sint32 itemId = 3;            //物品id
    repeated sint32 nums = 4;              //物品数量
}


//设置角色等级
message SetRoleLevel {
    required sint64 rid = 1;               //角色rid
    required sint32 wid = 2;               //世界wid
    required sint32 level = 3;             //等级level
}